--- a/CSS/contacto.css
+++ b/CSS/contacto.css
@@ -6,6 +6,8 @@
     line-height: 1.75rem; 
     background-color: #eaf2fd;   
     height: 600px;
+    margin-bottom: 10%;
+    background-color: var(--colorContraste);   
 }
 .Contacto .Container{
     grid-column: 2/2;
@@ -14,6 +16,7 @@
     flex-direction: column;
     width: 75%;
     justify-content:  space-between;
+    margin: auto;
 }
 .Contacto_img{
     grid-column: 1/1;
@@ -24,9 +27,7 @@
 .Contacto_titulo{
      font-size: 2rem; 
 }
-.Contacto_texto{
 
-}
 .Contacto_info{
     width: 100%;
     height: 50px;
@@ -36,6 +37,7 @@
     padding-top: 20px;
     background-color: white;
     border-radius: 5px;
+    margin-bottom: 5%;
 }
 .Contacto_info_txt{
     width: 100%;
@@ -44,6 +46,7 @@
     color: black;    
     border: none;
     outline: 0px;
+    
 }
 .Contacto_info .Contacto_label {
     position: absolute;
@@ -83,7 +86,7 @@
 }
 .Mensaje{
     width: 100%;
-    height: 100px;
+    height: 100px;    
 }
 .Contacto_label_txt_Mensaje{
     position: absolute;    
@@ -100,7 +103,7 @@
 .Contacto_info_txt:focus + .Contacto_label:after, .Contacto_info_txt:valid + .Contacto_label:after{
     transform: translateX(0%);
 }
-.Contacto_enviar{
+.Contacto_enviar{    
     border-radius: 5px;
     border: 1px solid #278AEE;
     background-color: #278AEE;
@@ -113,5 +116,19 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
+    margin: auto;
+    margin-top: 5%;
+}
+.Contacto_txt_error{
+    color: red;
+    margin: auto;
+}
+@media  only screen and (max-width: 1024px)  {
+    .Contacto_img{
+      display: none;
+    }
+    .Contacto{
+        display: flex;
+        justify-content: center;
+    }
 }
