--- a/CSS/formacion.css
+++ b/CSS/formacion.css
@@ -1,5 +1,6 @@
 .Formacion{
     padding: 2rem;
+    background-color: var(--colorPrimario);
 }
 .Formacion_titulo{
     text-align: center;
@@ -17,12 +18,13 @@
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 50% 50%;  
-    width: 400px;        
-    height: 350px;
+    width: 250px;        
+    height: 150px;
     padding: 2rem;    
     margin: 1rem;
     border-radius: 5px;
-    box-shadow: 0 2px 10px 2px #00000010;        
+    box-shadow: 0 2px 10px 2px #00000010;  
+    background-color: var(--colorContraste);      
 }
 .Formacion_texto{    
     font-size: 1.5rem;    
@@ -37,6 +39,17 @@
     text-align: center;   
 }
 .Formacion_img_img{
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
+@media  only screen and (max-width: 1024px)  {
+    .Formacion_cards{                
+        justify-content: center;
+    }
+    .Formacion_titulo{
+        line-height: 2rem;
+    }
+}
+
+
+
