--- a/CSS/hobbies.css
+++ b/CSS/hobbies.css
@@ -1,5 +1,6 @@
 .Hobbies{
     padding: 2rem;
+    background-color: var(--colorSecundario);
 }
 .Hobbies_titulo{
     text-align: center;
@@ -20,6 +21,7 @@
     border-radius: 5px;
     box-shadow: 0 2px 10px 2px #00000010;
     text-align: center;
+    background-color: var(--colorContraste);
 }
 .Hobbies_card_texto{    
     font-size: 1.5rem;
@@ -29,4 +31,9 @@
     padding-top: 1rem;  
     width: 70px;  
     margin: 0.05rem;  
+}
+@media  only screen and (max-width: 1024px)  {
+    .Hobbies_cards{                
+        justify-content: center;
+    }
 }
