--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -1,6 +1,6 @@
 .Skills{
-
     padding: 2rem;
+    background-color: var(--colorPrimario);
 }
 .Skills_titulo{
     text-align: center;
@@ -11,20 +11,15 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content:  space-between;
+    justify-content:  space-between;    
 }
-
 .Skills_card{  
     width: 400px;    
     padding: 2rem;    
     margin: 1rem;
     border-radius: 5px;
     box-shadow: 0 2px 10px 2px #00000010;
-    
-    
-}
-.Skills_card_cuerpo{   
-    
+    background-color: var(--colorContraste);
 }
 .Skills_card_titulo{    
     font-size: 1.5rem;
@@ -41,4 +36,9 @@
 .Skills_card_imagenes_img{
     width: 70px;  
     margin: 0.05rem;  
+}
+@media  only screen and (max-width: 1024px)  {
+    .Skills_cards{                
+        justify-content: center;
+    }
 }
