--- a/CSS/introduccion.css
+++ b/CSS/introduccion.css
@@ -25,7 +25,7 @@
     grid-row:1/4;               
     width: 300px;
     height: 300px;
-    background-image: url('../img/perfil.jpeg');
+    background-image: url('../img/perfil.jpg');
     background-size: cover;
     border-radius: 50%;   
     margin: 0 auto;
